# dream

./: .env.example  .gitignore  .prettierrc  .secrets.env.example  Cargo.toml  README.md  index.html  package.json  products.json  tsconfig.json  vite.config.ts  vite.ts
.github/workflows/: deploy.yml
admin/: icons.tsx  index.html  index.tsx  models.ts  tsconfig.json
admin/comps/: alert.tsx  confact.tsx  copiable.tsx  fanel.tsx  index.ts
admin/layout/: discounts.tsx  navbar.tsx  orders.tsx
admin/shared/: fmt.ts  httpx.ts
admin/store/: self.ts
admin/style/: fonts.scss  index.scss  input.scss  root.scss
app/: index.html  index.tsx  models.ts  signature.ts  tsconfig.json
app/components/: index.ts  special.tsx
app/comps/: alert.tsx  countUp.tsx  counter.tsx  index.ts  select.tsx  special.tsx
app/icons/: dashboard.tsx  footer.tsx  home.tsx  login.tsx  navbar.tsx  products.tsx
app/layout/: footer.tsx  navbar.tsx
app/shared/: color.ts  httpx.ts  index.ts
app/state/: nav.ts  products.ts
app/store/: theme.ts
app/style/: base.scss  signature.scss  theme.scss
app/utils/: particle.js  tilt.js
config/: backup.sh  deploy.sh  dream-backup.service  dream-backup.timer  dream.service  nginx.conf
migrations/: 0001_init.sql  0002_vendor.sql  0003_vendor_orders.sql
src/: config.rs  docs.rs  general.rs  main.rs  models.rs  old.models.rs  utils.rs  web.rs
src/admin/: discount.rs  mod.rs  order.rs  product.rs  user.rs
src/api/: mod.rs  order.rs  product.rs  user.rs  verification.rs
src/models/: auth.rs  common.rs  discount.rs  error.rs  mod.rs  order.rs  user.rs  (+2 more)
(+57 files in other folders)
